*And thus, a new bot was born.* No but seriously, the bot works, yay! - Even got a nice makefile to automagically setup everything. *majiks!*

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Custom
-secrets.json
+options.py
+keys.py
+
 cty.dat
 cty.json
 cty.zip
+
+botenv/
+
 
 #########################################################
 # Byte-compiled / optimized / DLL files
