--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # Custom
-options.py
-keys.py
-
 cty.dat
 cty.json
 cty.zip
 
-botenv/
-data/
+/botenv/
+/devenv/
+/data/
 
 
 #########################################################
