--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ cty.zip
 /devenv/
 /data/
 
+/docker-compose.yml
+
 
 #########################################################
 # Byte-compiled / optimized / DLL files
