--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile -t $IMAGE_NAME
+        run: |
+          echo ${{ github.sha }} > git_commit
+          docker build . --file Dockerfile -t $IMAGE_NAME
 
       - name: Log into Github Package Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
