--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
-discord.py
-ctyparser
-beautifulsoup4
-lxml
-pytz
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
+beautifulsoup4==4.9.1
+certifi==2020.6.20
+chardet==3.0.4
+ctyparser==2.0.0.post1
+discord.py==1.3.4
+feedparser==5.2.1
+greenlet==0.4.16
+idna==2.10
+lxml==4.5.2
+msgpack==1.0.0
+multidict==4.7.6
+pytz==2020.1
+requests==2.24.0
+soupsieve==2.0.1
+urllib3==1.25.9
+websockets==8.1
+yarl==1.4.2
