--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
+        id: build_image
         run: |
           echo ${{ github.sha }} > git_commit
           docker build . --file Dockerfile -t $IMAGE_NAME
@@ -27,13 +28,10 @@ jobs:
       - name: Log into Github Package Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
-      - name: Log into Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
       - name: Push image to registries
+        id: push_image
         run: |
-          GITHUB_IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-          DOCKER_IMAGE_ID=${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
 
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
@@ -43,16 +41,31 @@ jobs:
 
           [[ "$VERSION" == "master" ]] && VERSION=dev
 
-          echo GITHUB_IMAGE_ID=$GITHUB_IMAGE_ID
-          echo DOCKER_IMAGE_ID=$DOCKER_IMAGE_ID
+          echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
 
-          # tag for Github Registry
-          docker tag $IMAGE_NAME $GITHUB_IMAGE_ID:$VERSION
-          [[ "$VERSION" != "dev" ]] && docker tag $IMAGE_NAME $GITHUB_IMAGE_ID:latest
-          docker push $GITHUB_IMAGE_ID
+          # allow $IMAGE_ID and $VERSION to be used in future steps
+          echo ::set-output name=image_id::${IMAGE_ID}
+          echo ::set-output name=version::${VERSION}
 
-          # tag for Docker Hub
-          docker tag $IMAGE_NAME $DOCKER_IMAGE_ID:$VERSION
-          [[ "$VERSION" != "dev" ]] && docker tag $IMAGE_NAME $DOCKER_IMAGE_ID:latest
-          docker push $DOCKER_IMAGE_ID
+          # tag for Github Registry
+          # tag dev or x.x.x
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          # tag latest if not a dev release
+          [[ "$VERSION" != "dev" ]] && docker tag $IMAGE_NAME $IMAGE_ID:latest
+          docker push $IMAGE_ID
+
+      - name: Deploy Official Images
+        id: deploy_images
+        uses: satak/webrequest-action@v1.2.3
+        with:
+          url: ${{ secrets.DEPLOY_URL }}
+          method: POST
+          headers: '{"Authentication": "Token ${{ secrets.DEPLOY_TOKEN }}"}'
+          payload: |
+            # repository is $namespace/$repo
+            # version is dev or x.x.x
+            '{
+              "repository": "${{ github.repository }}",
+              "version": "${{ steps.push_image.outputs.version }}"
+             }'
