--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,10 +1,13 @@
+# vim: ts=2 sw=2:
+
 name: Linting
 
 on: [push,pull_request]
 
 jobs:
   flake8_py3:
-    runs-on: ubuntu-latest
+    name: flake8 (Python 3)
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v1
@@ -19,8 +22,10 @@ jobs:
           checkName: 'flake8_py3'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   mypy_py3:
-    runs-on: ubuntu-latest
+    name: mypy (Python 3)
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v1
@@ -28,7 +33,7 @@ jobs:
           python-version: 3.7
           architecture: x64
       - name: Install mypy
-        # install dev-requirements.txt?
+        # TODO install dev-requirements.txt?
         run: pip install mypy
       - name: Run mypy
-        run: mypy # --idk-what-args
+        run: mypy # TODO --idk-what-args
