--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,5 @@
+# vim: ts=2 sw=2:
+
 on:
   push:
     # Sequence of patterns matched against refs/tags
@@ -7,20 +9,23 @@ on:
 name: Create Release
 
 jobs:
-  build:
+  release:
     name: Create Release
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
 
       - name: Get Version Info
         id: get_tag
         shell: bash
         run: |
           SUBJECT=$(/usr/bin/git tag -l ${GITHUB_REF#refs/tags/} --format='%(subject)')
-          echo SUBJECT=$SUBJECT
           BODY=$(/usr/bin/git tag -l ${GITHUB_REF#refs/tags/} --format='%(body)' | sed '/-----BEGIN PGP SIGNATURE-----/,$d')
+
+          echo SUBJECT=$SUBJECT
           echo BODY=$BODY
 
           echo ::set-output name=subject::${SUBJECT}
