outputs can't be shared between jobs :oof:

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -57,11 +57,6 @@ jobs:
       - name: Push images to registry
         run: docker push ${{ steps.tag_image.outputs.image_id }}
 
-  deploy:
-    name: Deploy new images
-    runs-on: ubuntu-20.04
-    needs: docker
-    steps:
       - name: Deploy official images
         id: deploy_images
         uses: satak/webrequest-action@v1
@@ -69,4 +64,4 @@ jobs:
           url: ${{ secrets.DEPLOY_URL }}
           method: POST
           headers: '{"Authentication": "Token ${{ secrets.DEPLOY_TOKEN }}"}'
-          payload: '{"version": "${{ jobs.docker.steps.tag_image.outputs.version }}"}'
+          payload: '{"version": "${{ steps.tag_image.outputs.version }}"}'
