--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,8 @@ jobs:
   docker:
     name: Build and push docker images
     runs-on: ubuntu-20.04
+    permissions:
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
