--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,7 +42,7 @@ jobs:
           tags: |
             type=sha,prefix=
             type=raw,value=dev,enable={{is_default_branch}}
-            type=ref,event=tag,prefix=,enable={{is_default_branch}}
+            type=match,pattern=v(.*),group=1
           labels: |
             org.opencontainers.image.authors=classabbyamp and 0x5c
             org.opencontainers.image.url=https://github.com/miaowware/qrm2
@@ -50,6 +50,7 @@ jobs:
             org.opencontainers.image.vendor=miaowware
             org.opencontainers.image.title=qrm2
             org.opencontainers.image.description=Discord bot with ham radio functions
+            org.opencontainers.image.licenses=LiLiQ-Rplus-1.1
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v1
